created banners, and blogs apis
